[IMP] implementando vista listado de estudiantes para el adminsitrador/directo mediante carga de archivo .csv

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "flickity": "^3.0.0",
     "flickity-imagesloaded": "^2.0.0",
     "frontend": "file:",
+    "papaparse": "^5.4.1",
     "pinia": "^2.1.7",
-    "sweetalert2": "^11.14.0",
+    "sweetalert2": "^11.14.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
