--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "apexcharts": "^3.54.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart": "^0.1.2",
@@ -23,7 +24,9 @@
     "pinia": "^2.1.7",
     "sweetalert2": "^11.14.1",
     "vue": "^3.4.29",
+    "vue-apexcharts": "^1.6.2",
     "vue-router": "^4.3.3",
+    "vue3-apexcharts": "^1.7.0",
     "vuejs-paginate-next": "^1.0.2"
   },
   "devDependencies": {
